refactoring, fix layout jumping

--- a/source/pony.web/src/main/resources/net/dorokhov/pony/web/client/style.css
+++ b/source/pony.web/src/main/resources/net/dorokhov/pony/web/client/style.css
@@ -14,7 +14,7 @@
     border: 1px solid #8a8a8a;
 }
 .albumInfo {
-    margin-left: 160px;
+    margin-left: 165px;
 }
 .albumHeader {
     overflow: auto;
